--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/main.png" alt="..." /></div>
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/keyword.png" alt="..." /></div>
-                        <div class="col-lg-edit">
-                            <h2 class="fw-bolder">메인</h2>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder" style="margin-bottom: 15px;">메인</h2>
                             <p class="lead fw-normal text-muted mb-0">상단 배너에 관리자가 뽑은 3개의 컨텐츠를 띄우고, 총 4개의 인기글을 배치</p>
                             <p class="lead fw-normal text-muted mb-0">검색한 기록을 토대로 상위 키워드를 표시하며, 클릭 시 그 키워드로 이동</p>
                             <p class="lead fw-normal text-muted mb-0">자동으로 회전하는 배너를 하단에 배치</p>
@@ -62,8 +62,8 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/mylife.png" alt="..." /></div>
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/write.png" alt="..." /></div>
-                        <div class="col-lg-edit">
-                            <h2 class="fw-bolder">나의 일대기</h2>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder" style="margin-bottom: 15px;">나의 일대기</h2>
                             <p class="lead fw-normal text-muted mb-0">연대기 순으로 본인이 작성한 컨텐츠 배치 및 페이지 처리</p>
                             <p class="lead fw-normal text-muted mb-0">본인의 댓글, 좋아요, 알림, 회원 수정</p>
                             <p class="lead fw-normal text-muted mb-0">글 작성은 연도를 작성하여 생애주기별로 분배 및 제목 색상 변경</p>
@@ -74,10 +74,14 @@
             <section class="py-5 bg-light" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/main.png" alt="..." /></div>
-                        <div class="col-lg-6">
-                            <h2 class="fw-bolder">Our founding</h2>
-                            <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/login.png" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/sms.png" alt="..." /></div>
+                        <div class="col-lg-6" style="margin-top: 25px;">
+                            <h2 class="fw-bolder" style="margin-bottom: 20px;">로그인 페이지</h2>
+                            <p class="lead fw-normal text-muted mb-0">자체 회원가입 및 카카오 로그인</p>
+                            <p class="lead fw-normal text-muted mb-0">카카오 로그인 api 통해 카카오 로그인 구현</p>
+                            <p class="lead fw-normal text-muted mb-0">oAuth2와 token을 통한 인증</p>
+                            <p class="lead fw-normal text-muted mb-0">coolsms api를 이용해 sms 인증 구현</p>
                         </div>
                     </div>
                 </div>
@@ -86,10 +90,41 @@
             <section class="py-5">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/follow1.png" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/follow2.png" alt="..." /></div>
                         <div class="col-lg-6">
-                            <h2 class="fw-bolder">Growth &amp; beyond</h2>
-                            <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                            <h2 class="fw-bolder" style="margin-top: 15px;">팔로우 기능</h2>
+                            <p class="lead fw-normal text-muted mb-0">하트 이미지 클릭 시 팔로우 및 하트 색상 변경</p>
+                            <p class="lead fw-normal text-muted mb-0">상대방 프로필 내 채팅 이미지 클릭 시 채팅창으로 이동</p>
+                            <p class="lead fw-normal text-muted mb-0">나를 팔로우한 사람, 내가 팔로우한 사람을 표시 및 페이징 처리 완료</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="py-5 bg-light" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/chatting.png" alt="..." /></div>
+                        <div class="col-lg-6" style="margin-top: 25px;">
+                            <h2 class="fw-bolder" style="margin-bottom: 20px;">채팅방 기능</h2>
+                            <p class="lead fw-normal text-muted mb-0">채팅방 리스트 또는 이미지 클릭 시 그 사람과의 채팅창으로 이동</p>
+                            <p class="lead fw-normal text-muted mb-0">webSocket api 통해 양방향 통신 구현</p>
+                            <p class="lead fw-normal text-muted mb-0">팔로우 또는 팔로잉 중인 상대와만 채팅 가능</p>
+                            <p class="lead fw-normal text-muted mb-0">fetch api로 이미지를 띄워 누구와 대화하는지 한 눈에 보이게끔</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="py-5">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/inquiry.png" alt="..." /></div>
+                        <div class="col-lg-6" style="margin-top: 25px;">
+                            <h2 class="fw-bolder" style="margin-bottom: 20px;">문의 페이지</h2>
+                            <p class="lead fw-normal text-muted mb-0">각 사용자들의 문의를 리스트 형식으로</p>
+                            <p class="lead fw-normal text-muted mb-0">디테일은 모달창으로 화면 변경 없이</p>
+                            <p class="lead fw-normal text-muted mb-0">문의하기 또한 모달을 통해 바로 가능하게끔</p>
+                            <p class="lead fw-normal text-muted mb-0">공개/비공개를 설정</p>
                         </div>
                     </div>
                 </div>
@@ -98,50 +133,50 @@
             <section class="py-5 bg-light">
                 <div class="container px-5 my-5">
                     <div class="text-center">
-                        <h2 class="fw-bolder">Our team</h2>
-                        <p class="lead fw-normal text-muted mb-5">Dedicated to quality and your success</p>
+                        <h2 class="fw-bolder">팀원소개</h2>
+                        <p class="lead fw-normal text-muted mb-5">근근한잔💪</p>
                     </div>
                     <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Ibbie Eckart</h5>
-                                <div class="fst-italic text-muted">Founder &amp; CEO</div>
+                                <h5 class="fw-bolder">고태민</h5>
+                                <div class="fst-italic text-muted">팀원</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Arden Vasek</h5>
-                                <div class="fst-italic text-muted">CFO</div>
+                                <h5 class="fw-bolder">장윤근</h5>
+                                <div class="fst-italic text-muted">팀장</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-sm-0">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Toribio Nerthus</h5>
-                                <div class="fst-italic text-muted">Operations Manager</div>
+                                <h5 class="fw-bolder">윤담</h5>
+                                <div class="fst-italic text-muted">부팀장</div>
                             </div>
                         </div>
                         <div class="col mb-5">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Malvina Cilla</h5>
-                                <div class="fst-italic text-muted">CTO</div>
+                                <h5 class="fw-bolder">문동주</h5>
+                                <div class="fst-italic text-muted">팀원</div>
                             </div>
                         </div>
                         <div class="col mb-5">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Malvina Cilla</h5>
-                                <div class="fst-italic text-muted">CTO</div>
+                                <h5 class="fw-bolder">김주선</h5>
+                                <div class="fst-italic text-muted">팀원</div>
                             </div>
                         </div>
                         <div class="col mb-5">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Malvina Cilla</h5>
-                                <div class="fst-italic text-muted">CTO</div>
+                                <h5 class="fw-bolder">양효준</h5>
+                                <div class="fst-italic text-muted">팀원</div>
                             </div>
                         </div>
                         
